syntax = "proto3";

import "bigint.proto";
import "insonmnia.proto";

package sonm;

service Tensor {
    rpc GetJupyterNode(JupyterNodeRequest) returns (JupyterNodeResponse) {}
}

message JupyterNodeRequest {
    BigInt dealID = 1;
    EthAddress supplierID = 2;
    string repository = 3;
}

message JupyterNodeResponse {

}